add any-api collection

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
       "@components/*": ["src/components/*"],
       "@components": ["src/components/index.ts"],
       "@abi": ["src/features/abi/index.ts"]
-    }
+    },
+    "strictNullChecks": true
   }
 }
