--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@openzeppelin/contracts": "^4.9.2",
     "@project-serum/anchor": "^0.26.0",
+    "@types/jest": "^29.5.3",
     "@types/node": "^20.4.5",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
@@ -71,6 +72,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "hardhat": "^2.16.1",
     "husky": "^8.0.3",
+    "jest": "^29.6.2",
     "lint-staged": "^13.2.3",
     "lodash": "^4.17.21",
     "prettier": "^2.8.8",
